# Obsidivec

./: .env.example  .gitignore  Bot_Readme.md  Dockerfile  Dockerfile.api  Dockerfile.telegram-bot  EDIT_SERVICE_PLAN.md  LLMsearch.py  MCP_README.md  README.md  base_engine.py  bases_manager.py  compose.yml  config.example.yml  docker-compose.yml  et --hard e836efe71e5f4d55eb88088276586ed4f658e4d8  example.env  main.py  mcp_server.py  pyproject.toml  reindex.py  reindex.sh  requirements.txt  server.py  start.sh  telegram_bot.py  templates.md  tools.py  vaultkeeper.tar  whatsapp_bot.py
Vault/: Hexhiker.base  Loo.md  Media.base  Miare Tale.md  Places.base  Quotes.base  Recipies.base  Untitled 1.md  Untitled.md
Vault/Files/Media/: Alice's Adventures in Wonderland.md  Ambergris.md  American Made.md  Book of the New Sun.md  Bounded Lives, Bounded Places Free Black Society i.md  Chanur.md  Chaos.md  Chernobyl.md  Chrestomanci.md  Chronicles of Thomas Covenant.md  Deryni Chronicles.md  (+50 more)
search/: __init__.py  fuzzy.py  openrouter_embedder.py  semantic.py
src/vaultkeeper/: config.py  server.py
vaultkeeper/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
vaultkeeper/src/vaultkeeper/: __main__.py  auth.py  config.py  server.py
vaultkeeper/src/vaultkeeper/agent/: orchestrator.py  router.py
vaultkeeper/src/vaultkeeper/bases/: parser.py
vaultkeeper/src/vaultkeeper/index/: chunker.py  indexer.py
vaultkeeper/src/vaultkeeper/llm/: client.py
vaultkeeper/src/vaultkeeper/tools/: undo.py
vaultkeeper/src/vaultkeeper/vault/: watcher.py  writer.py
(+27 files in other folders)
